# vgi-xslt

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  conftest.py  pyproject.toml  xslt_worker.py
.github/workflows/: ci.yml
ci/: README.md  preprocess-require.awk  run-integration.sh
test/sql/: transform.test  xpath.test
tests/: harness.py  test_engine.py  test_scalars.py  test_tables.py
vgi_xslt/: __init__.py  engine.py  meta.py  scalars.py  schema_utils.py  tables.py
