[project]
name = "vgi-xslt"
version = "0.1.0"
description = "XSLT 3.0 / XQuery 3.1 / XPath 3.1 over XML for DuckDB via VGI (SaxonC-HE)"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "xml",
    "xslt",
    "xquery",
    "xpath",
    "saxon",
    "saxonche",
    "shredding",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.8.3",
    "saxonche>=13.0",
    "pyarrow",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_xslt"]

[tool.ruff]
line-length = 110
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
