[project]
name = "vgi-xslt"
version = "0.1.0"
description = "XSLT 3.0 / XQuery 3.1 / XPath 3.1 over XML for DuckDB via VGI (SaxonC-HE)"
readme = "README.md"
keywords = [
    "duckdb",
    "apache-arrow",
    "vgi",
    "sql",
    "xml",
    "xslt",
    "xquery",
    "xpath",
    "saxon",
    "saxonche",
    "shredding",
]
license = { file = "LICENSE" }
authors = [{ name = "Query Farm LLC", email = "hello@query.farm" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Text Processing :: Markup :: XML",
    "Typing :: Typed",
]
requires-python = ">=3.13"
dependencies = [
    "vgi-python>=0.8.5",
    "saxonche>=13.0",
    "pyarrow",
]

[project.optional-dependencies]
# HTTP transport: the worker can serve over HTTP (`xslt_worker.py --http`) in
# addition to stdio. That path needs vgi-python's `http` extra (waitress).
# CI's http transport leg installs this via `uv sync --extra http`.
http = [
    "vgi-python[http]>=0.8.5",
]
dev = [
    "pytest>=8",
    "ruff",
    "mypy",
    "pydoclint",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vgi_xslt"]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.per-file-ignores]
# Docstrings (D) are enforced on the worker package/script (product code), not tests.
"tests/**" = ["D"]
"conftest.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"

[tool.pydoclint]
# Docstring consistency gate (complements ruff's D rules: ruff checks docstring
# shape, pydoclint checks documented args/returns/attrs match the code).
style = "google"
arg_type_hints_in_docstring = false
check_return_types = false
check_yield_types = false
check_class_attributes = true
skip_checking_raises = true
allow_init_docstring = true

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
# Genuinely untyped third-party library (no stubs published).
module = ["saxonche.*"]
ignore_missing_imports = true
